@@ -4,35 +4,22 @@ import cn.opensrcdevelop.auth.client.authorize.AuthorizeExpressionRootObject;
 import cn.opensrcdevelop.auth.client.authorize.annoation.Authorize;
 import cn.opensrcdevelop.auth.client.config.AuthClientProperties;
 import cn.opensrcdevelop.auth.client.constants.ApiConstants;
-import cn.opensrcdevelop.auth.client.constants.AuthClientConstants;
-import cn.opensrcdevelop.auth.client.exception.AuthClientException;
-import cn.opensrcdevelop.auth.client.support.OAuth2Context;
 import cn.opensrcdevelop.auth.client.support.OAuth2ContextHolder;
 import cn.opensrcdevelop.auth.client.util.HttpUtil;
-import cn.opensrcdevelop.auth.client.util.SpringELUtil;
 import jakarta.servlet.http.HttpServletRequest;
-import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.aopalliance.intercept.MethodInvocation;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.BeansException;
-import org.springframework.context.ApplicationContext;
-import org.springframework.context.ApplicationContextAware;
 import org.springframework.core.DefaultParameterNameDiscoverer;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.security.oauth2.core.OAuth2AuthenticationException;
-import org.springframework.util.Assert;
-import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
-import java.io.IOException;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.*;
 import java.util.stream.IntStream;
 
@@ -41,16 +28,14 @@ import java.util.stream.IntStream;
  */
 @Slf4j
 @RequiredArgsConstructor
-public class PermissionService implements ApplicationContextAware {
+public class PermissionService {
 
-    private static final String API_USER_PERMISSIONS = "/api/v1/permission/me";
+    private static final String API_VERIFY_PERMISSIONS = "/api/v1/permission/verify";
     private static final String HEADER_AUTHORIZATION = "Authorization";
     private static final String HEADER_BEARER = "Bearer ";
     private static final String URL_FORMAT = "%s://%s";
 
     private final AuthClientProperties authClientProperties;
-
-    private ApplicationContext applicationContext;
 
     /**
      * 权限校验
@@ -76,121 +61,34 @@ public class PermissionService implements ApplicationContextAware {
             return true;
         }
 
-        String[] needPermissions = authorizeAnno.value();
+        List<String> needPermissions = Arrays.asList(authorizeAnno.value());
         boolean anyMatch = authorizeAnno.anyMatch();
-        return anyMatch ? hasAnyPermission(methodInvocation, needPermissions) : hasAllPermission(methodInvocation, needPermissions);
-    }
 
-    /**
-     * 判断用户是否拥有请求权限中的任意权限
-     *
-     * @param mi 方法调用
-     * @param permissions 请求权限
-     * @return 判断结果
-     */
-    private boolean hasAnyPermission(MethodInvocation mi, String... permissions) {
-        try {
-            // 1. 获取用户权限
-            var userPermissions = getUserPermissions();
-
-            // 2. 鉴权
-            if (CollectionUtils.isNotEmpty(userPermissions)) {
-                return Arrays.stream(permissions).anyMatch(p -> checkPermission(mi, p, userPermissions));
-            }
-            return false;
-        } catch (HttpClientErrorException.Unauthorized e) {
-            throw new OAuth2AuthenticationException("invalid provided token");
-        } catch (IOException e) {
-            throw new AuthClientException(e, "check permission failed");
-        }
-    }
-
-    /**
-     * 判断用户是否拥有全部的请求权限
-     *
-     * @param  mi 方法调用
-     * @param permissions 请求权限
-     * @return 判断结果
-     */
-    private boolean hasAllPermission(MethodInvocation mi, String... permissions) {
-        try {
-            // 1. 获取用户权限
-            var userPermissions = getUserPermissions();
-
-            // 2. 鉴权
-            if (CollectionUtils.isNotEmpty(userPermissions)) {
-                return Arrays.stream(permissions).allMatch(p -> checkPermission(mi, p, userPermissions));
-            }
-            return false;
-        } catch (HttpClientErrorException.Unauthorized e) {
-            throw new OAuth2AuthenticationException("invalid provided token");
-        } catch (IOException e) {
-            throw new AuthClientException(e, "check permission failed");
-        }
-    }
-
-    /**
-     * 权限检验
-     *
-     * @param mi 方法调用
-     * @param permission 请求的权限
-     * @param userPermissions 用户拥有的权限
-     * @return 是否通过
-     */
-    private boolean checkPermission(MethodInvocation mi, String permission, List<Map<String, Object>> userPermissions) {
         // 1. 获取 properties 中设置的权限信息
-        AuthClientProperties.ResourcePermission resourcePermission = authClientProperties.getAuthorize().get(permission);
-        Assert.notNull(resourcePermission, "can not find permission in properties");
+        List<String> permissionLocators = needPermissions.stream()
+                .map(p -> authClientProperties.getAuthorize().get(p).getPermission())
+                .toList();
 
-        // 2. 过滤用户拥有的权限信息
-        var targetPermission = userPermissions.stream().filter(p ->
-                StringUtils.equals((String) p.get(ApiConstants.RESOURCE_CODE), resourcePermission.getResource())
-                && StringUtils.equals((String) p.get(ApiConstants.PERMISSION_CODE), resourcePermission.getPermission())
-        ).findFirst();
+        // 2. 校验权限
+        List<Map<String, Object>> verifyResults = callVerifyApi(permissionLocators, getMethodParams(methodInvocation));
 
-        // 3. 用户拥有的权限与请求的权限匹配
-        if (targetPermission.isPresent()) {
-            // 3.1 限制条件校验
-            @SuppressWarnings("unchecked")
-            var conditions = (List<Map<String, Object>>) targetPermission.get().get(ApiConstants.CONDITIONS);
-            if (CollectionUtils.isNotEmpty(conditions)) {
-                // 3.1.1 需满足所有限制条件
-                return conditions.stream().allMatch(c -> checkCondition(mi, (String) c.get(ApiConstants.EXPRESSION)));
-            }
-            return true;
-        }
-        return false;
-    }
-
-    /**
-     * 限制条件校验
-     *
-     * @param mi 方法调用
-     * @param expression SpringEL 表达式
-     * @return 是否满足限制条件
-     */
-    private boolean checkCondition(MethodInvocation mi, String expression) {
-        OAuth2Context oAuth2Context = OAuth2ContextHolder.getContext();
-        if (Objects.isNull(oAuth2Context)) {
+        // 3. 判断是否校验通过
+        if (CollectionUtils.isEmpty(verifyResults)) {
             return false;
         }
-        Map<String, Object> attributes = new HashMap<>(oAuth2Context.getOAuth2Attributes().getAttributes());
-        // 添加方法调用
-        attributes.put(AuthClientConstants.METHOD_INVOCATION, mi);
-        // 添加方法调用参数
-        attributes.put(AuthClientConstants.METHOD_PARAMS, getMethodParams(mi));
-        return Boolean.TRUE.equals(SpringELUtil.parseAuthorizeCondition(attributes, applicationContext, expression));
+        if (anyMatch) {
+            return verifyResults.stream().anyMatch(r -> Boolean.TRUE.equals(r.get(ApiConstants.ALLOW)));
+        } else {
+            return verifyResults.stream().allMatch(r -> Boolean.TRUE.equals(r.get(ApiConstants.ALLOW)));
+        }
     }
 
-    /**
-     * 获取用户权限
-     *
-     * @return 用户权限
-     */
-    private List<Map<String, Object>> getUserPermissions() throws MalformedURLException {
+    private List<Map<String, Object>> callVerifyApi(List<String> permissions, Map<String, Object> methodParams) {
         if (OAuth2ContextHolder.getContext() == null) {
             return Collections.emptyList();
         }
+
+        HttpServletRequest originalRequest = ((ServletRequestAttributes) Objects.requireNonNull(RequestContextHolder.getRequestAttributes())).getRequest();
 
         // 1. 调用 API
         ServletRequestAttributes requestAttributes = (ServletRequestAttributes) RequestContextHolder.getRequestAttributes();
@@ -202,14 +100,25 @@ public class PermissionService implements ApplicationContextAware {
         // 1.1 获取 baseUrl
         String baseUrl;
         if (StringUtils.isEmpty(authClientProperties.getIssuer())) {
-            URL url = new URL(request.getRequestURL().toString());
-            baseUrl = String.format(URL_FORMAT, url.getProtocol(), url.getAuthority());
+            URI uri = URI.create(request.getRequestURL().toString());
+            baseUrl = String.format(URL_FORMAT, uri.getScheme(), uri.getAuthority());
         } else {
             baseUrl = authClientProperties.getIssuer();
         }
-        var apiResponse = HttpUtil.getRestClient().get()
-                .uri(baseUrl + API_USER_PERMISSIONS)
+
+        // 1.2 调用
+        var apiResponse = HttpUtil.getRestClient()
+                .post()
+                .uri(baseUrl + API_VERIFY_PERMISSIONS)
                 .header(HEADER_AUTHORIZATION, HEADER_BEARER + OAuth2ContextHolder.getContext().getAccessToken().getTokenValue())
+                .header("X-Forwarded-For", originalRequest.getRemoteAddr())
+                .header("User-Agent", originalRequest.getHeader("User-Agent"))
+                .body(Map.of(
+                        ApiConstants.PERMISSIONS, permissions,
+                        ApiConstants.CONTEXT, Map.of(
+                                ApiConstants.REQ_PARAMS, methodParams
+                        )
+                ))
                 .retrieve()
                 .body(new ParameterizedTypeReference<Map<String, Object>>() {});
 
@@ -217,10 +126,10 @@ public class PermissionService implements ApplicationContextAware {
             return Collections.emptyList();
         }
 
-        // 2. 获取用户权限
+        // 2. 获取权限校验结果
         Boolean isSuccess = HttpUtil.getApiResponseItem(apiResponse, ApiConstants.SUCCESS);
         if (!Boolean.TRUE.equals(isSuccess)) {
-            log.warn("获取用户权限失败。");
+            log.warn("校验用户权限失败。");
             return Collections.emptyList();
         }
 
@@ -239,15 +148,10 @@ public class PermissionService implements ApplicationContextAware {
         Method method = mi.getMethod();
         String[] paramNames = parameterNameDiscoverer.getParameterNames(method);
 
-        Map<String, Object> methodParams = new LinkedHashMap<>(args.length);
+        Map<String, Object> methodParams = LinkedHashMap.newLinkedHashMap(args.length);
         if (Objects.nonNull(paramNames) && args.length == paramNames.length ) {
             IntStream.range(0, args.length).forEach(i -> methodParams.put(paramNames[i], args[i]));
         }
         return methodParams;
-    }
-
-    @Override
-    public void setApplicationContext(@NonNull ApplicationContext applicationContext) throws BeansException {
-        this.applicationContext = applicationContext;
     }
 }
